2005-11-29 Peter Debackere  <Peter.Debackere@UGent.be>

        * slab.cpp: Add option to calculate dispersion relation using kt
                    from cladding.
	* slab.h: Ditto.
	* slabdisp.cpp: Ditto.
	* slabdisp.h: Ditto.
	* slabmode.cpp: Ditto.

2005-08-29 Peter Debackere  <Peter.Debackere@UGent.be>

        * slab.cpp: Make metal layers always core candidates.

2005-08-19 Peter Bienstman  <Peter.Bienstman@UGent.be>

        * slab.cpp: Make sure old_kt is always relevant.

2005-08-19 Peter Bienstman  <Peter.Bienstman@UGent.be>

        * slab.cpp: Don't copy gain material.

2005-06-30 Peter Bienstman  <Peter.Bienstman@UGent.be>

        * slaboverlap.cpp: Make more standards compliant.

2005-06-13 Peter Debackere  <Peter.Debackere@UGent.be>

        * slab.cpp: Add ASR solver.
	* slab.h: Ditto.

2005-02-09 Peter Bienstman  <Peter.Bienstman@UGent.be>

        * slab.cpp: Add support for biaxial plane wave estimates.
        * slab.h: Ditto.

2005-01-28 Peter Debackere  <Peter.Debackere@UGent.be>

	* slab.cpp: First version of of ASR solver.

2005-01-26 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slab.cpp: Better stability for mirrored slabs.
	* slab.h: Ditto.
	* slaboverlap.cpp: Ditto.
	* slaboverlap.h: Ditto.

2004-03-04 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slab.cpp: Lambda can now be complex.
	* slabdisp.h: Ditto.
	* slabdisp.cpp: Ditto.
	* slaboverlap.cpp: Ditto.

2003-12-08 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slaboverlap.h: Add overlap with plane wave.
	* slaboverlap.cpp: Ditto.

2003-11-17 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slab.cpp: Introduce material_at.

2003-11-03 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slaboverlap.cpp: Relax tolerance.

2003-10-29 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slaboverlap.cpp: Improve detection of normalisation integrals.

2003-08-07 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slab.cpp: Throw away bogus estimates.
